--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -282,7 +282,7 @@ Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
 . Gib den *Benutzernamen* für den Server ein.
 . Gib das *Passwort* für den Server ein.
 . Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll.
-. Klicke auf *Verbindung testen* +
+. Klicke auf *Verbindung testen*. +
 → Die Servereinstellungen werden geprüft:
   * Kann eine Verbindung zu dem Server hergestellt werden?
   * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
@@ -305,7 +305,7 @@ Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
 . Gib den *Benutzernamen* für den Server ein.
 . Gib das *Passwort* für den Server ein.
 . Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll.
-. Klicke auf *Verbindung testen* +
+. Klicke auf *Verbindung testen*. +
 → Die Servereinstellungen werden geprüft:
   * Kann eine Verbindung zu dem Server hergestellt werden?
   * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
@@ -330,7 +330,7 @@ Protokoll-Präfixe sind zum Beispiel `ftp://` und `ftps://`.
 . Gib das *Passwort* für den Server ein.
 . Gib den *Pfad* zu dem Speicherort ein, an dem der Export gespeichert werden soll. +
 *_Hinweis:_* Gib den vollständigen Pfad ein.
-. Klicke auf *Verbindung testen* +
+. Klicke auf *Verbindung testen*. +
 → Die Servereinstellungen werden geprüft:
   * Kann eine Verbindung zu dem Server hergestellt werden?
   * Kann eine Exportdatei an dem Speicherort gespeichert werden? +
