update translation faq crm

--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -1,9 +1,9 @@
 = FAQ: CRM
-:keywords: FAQ CRM, frequently asked questions CRM
+:keywords: FAQ CRM, questions and answers CRM
 :description: On this page, you can find questions and answers about the CRM area.
 :author: team-crm
 
-On this page, you can find questions and answers about the CRM area. We will continuously update this list and add more questions and answers.
+On this page, you can find questions and answers about the CRM area. We are continuously adding more questions and answers to this list.
 
 [#faq-section-addresses]
 == Addresses
@@ -43,7 +43,7 @@ The address data of the person who ordered as a guest in your plentyShop can onl
 
 *Guest orders in the CRM » Quick search menu:*
 
-* In case of guest orders via your plentyShop, the saved data record consists only of the address and the corresponding order. A contact ID is _not_ assigned. But, the symbol material:done[] is shown in the overview’s *Guest* column.
+* In case of guest orders via your plentyShop, the saved data record consists only of the address and the corresponding order. A contact ID is _not_ assigned. But, the symbol material:done[] is shown in the overview in the *Guest* column.
 
 * In case of a guest order via a marketplace, a contact ID is assigned and the symbol material:done[] is shown in the overview’s *Guest* column.
 --
@@ -60,7 +60,7 @@ A customer asks you to delete her data from your system. To be in compliance wit
 * Go to *CRM » Quick search*.
 * Search for the data record and open it.
 * Click on icon:user-secret[] (*Anonymise data record*) in the upper line.
-* A window opens. Here, you have to enter the contact ID again to confirm the anonymisation action. +
+* → A window opens. Here, you have to enter the contact ID again to confirm the anonymisation action. +
 *_Important:_* This anonymisation action _cannot_ be undone.
 * Click on *Anonymise*.
 
@@ -94,6 +94,16 @@ It is most likely that you are looking for the button in the wrong menu. Anonymi
 For further information about anonymising contact data, refer to the box <<#faq-delete-customer-data, How can I delete contact data in compliance with GDPR?>> and to the xref:crm:quick-search.adoc#anonymise-data-record[Quick search] page.
 --
 
-// == Email templates
+[#email-templates]
+== Email templates
+ 
+[#faq-practical-example-tracking-url]
+[.collapseBox]
+.How can I send an email template with the tracking URL to my customers once the package number is available at the order?
+--
+You would like to send an email template that contains the tracking URL to your customers as soon as the order has been successfully registered with the shipping service provider and the package number is available at the order? 
+
+Just have a look at this xref:crm:practical-example-send-tracking-url.adoc#[practical example] where we explain step by step which settings you need to carry out in your plentymarkets system.
+--
 
 // == Email despatch
