ADD address changes and more

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -457,7 +457,7 @@ Diese Spalte ist eine Standardspalte.
 === Auftragspositionen ein- und ausblenden
 
 In der Auftragsübersicht werden die Auftragspositionen standardmäßig nicht angezeigt. Möchtest du Eigenschaften zu Auftragspositionen, wie *Name* oder *Wert* sehen, klicke in der Zeile des Auftrags links auf das Pfeilsymbol (material:chevron_right[]). Zunächst werden dir die Informationen zum Auftrag, wie *Menge*, *Artikel-ID* oder *Variantennummer* angezeigt. Klicke auf dieser Ebene ein weiteres Mal links auf das Pfeilsymbol (material:chevron_right[]), um die Eigenschaften zu sehen. +
-*_Hinweis:_* Möchtest du die Eigenschaften der Auftragspositionen bearbeiten, öffne den gewünschten Auftrag und klicke im Bereich *Auftragspositionen* auf *Bearbeiten* (material:edit[]).
+*_Hinweis:_* Möchtest du die Eigenschaften der Auftragspositionen bearbeiten, öffne den gewünschten Auftrag und klicke im Bereich *Auftragspositionen* auf *Artikel bearbeiten* (material:edit[]).
 
 [#editing-mode]
 == Bearbeitungsmodus verwenden
