--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -28,6 +28,11 @@ Gruppenfunktionen nutzen:
 . Wähle (material:done[]) alle Aufträge, für die du gesammelt eine Aktion ausführen möchtest.
 . Wähle eine der verfügbaren Gruppenfunktionen. Beachte dazu die Erläuterungen in <<table-order-group-functions>>.
 
+[TIP]
+.Standard-Gruppenfunktionen wählen
+Im Bearbeitungsmodus (terra:design_inline_edit[role="darkGrey"]) der Auftragsübersicht kannst du
+*Standard-Gruppenfunktionen* festlegen, die beim Wählen von Aufträgen direkt sichtbar werden. Alle übrigen Gruppenfunktionen werden automatisch in das Kontextmenü (material:more_vert[]) verlagert.
+
 [[table-order-group-functions]]
 .Gruppenfunktionen für Aufträge
 [cols="2,1,6a"]
@@ -103,6 +108,9 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 |Ermöglicht das Löschen eines Auftrags. Beachte, dass Aufträge unter Umständen nicht gelöscht werden können.
 
 |===
+
+[TIP]
+Hast du einen Auftrag geöffnet, kannst du ganz unten links in der Seitennavigation die ID des Auftrags mit einem Klick auf die Auftrags-ID (material:content_copy[]) in die Zwischenablage kopieren.
 
 [#order-areas]
 == Erläuterungen zu den einzelnen Bereichen
@@ -376,6 +384,43 @@ Die folgenden Felder stehen dir zur Verfügung: +
 
 |===
 
+==== Adresse ändern
+
+Bei einer Adresse kannst du entweder einzelne Felder der aktuellen Adresse anpassen oder sogar eine komplett neue Adresse zuweisen, die die aktuelle Adresse ersetzt. Gehe wie im Folgenden beschrieben vor, um eine Adresse zu ändern.
+
+[.instruction]
+Einzelne Felder einer Adresse ändern:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Adresse ändern möchtest.
+. Gehe in den Bereich *Adressen*.
+. Klicke bei der Rechnungs- bzw. Lieferadresse auf das Kontextmenü (material:more_vert[]).
+. Wähle die Option *Adresse bearbeiten* (material:edit[]). +
+→ Die Einstellungen der Adresse werden geöffnet.
+. Nimm die Änderungen vor.
+. *Speichere* (material:save[]) die Einstellungen. +
+→ Die Adresse wird den Einstellungen entsprechend angepasst.
+
+
+[.instruction]
+Andere Adresse zuweisen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Adresse ändern möchtest.
+. Gehe in den Bereich *Adressen*.
+. Klicke bei der Rechnungs- bzw. Lieferadresse auf das Kontextmenü (material:more_vert[]).
+. Wähle die Option *Adresse ändern* (material:social_distance[]). +
+→ Ein Fenster mit den bereits verfügbaren Adressen wird geöffnet.
+. Klicke rechts in der Zeile der gewünschten Adresse auf *Adresse zuweisen* (material:add_link). +
+→ Die gewählte Adresse wird als neue Adresse zugewiesen.
+
+*_Hinweis:_* Ist ein Auftrag gesperrt, können nur die folgenden Felder geändert werden: +
+
+* Rechnungsadresse: *E-Mail-Adresse* und *Telefonnummer*
+* Lieferadresse: alle Felder außer *Umsatzsteuernummer* und *Land*
+
 [#area-order-items]
 === Bereich: Auftragspositionen
 
@@ -474,7 +519,7 @@ Diese Spalte ist eine Standardspalte.
 [discrete]
 ==== Artikel bearbeiten
 
-Im Bereich *Auftragspositionen* hast du je nach Auftragstyp die Möglichkeit, die im Auftrag vorhandenen Artikel zu bearbeiten. Klicke dazu links auf den Bearbeitungsstift (material:edit[]). Die folgende Tabelle listet die verfügbaren Felder, die auch hier je nach Auftragstyp variieren können.
+Im Bereich *Auftragspositionen* hast du je nach Auftragstyp die Möglichkeit, die im Auftrag vorhandenen Artikel zu bearbeiten. Klicke dazu links auf *Artikel bearbeiten* (material:edit[]). Die folgende Tabelle listet die verfügbaren Felder, die auch hier je nach Auftragstyp variieren können.
 
 [[table-edit-items]]
 .Artikel bearbeiten
@@ -785,6 +830,9 @@ Im Bereich *Zugeordnete Zahlungen* siehst du alle Informationen zu den Zahlungen
 === Bereich: Auftragsreferenzen
 
 Im Bereich *Auftragsreferenzen* siehst du die mit dem Auftrag verbundenen Informationen. Über *Spalten konfigurieren* (material:settings[]) kannst du die Spalten beliebig anpassen.
+
+[TIP]
+Wähle im Bearbeitungsmodus, ob es sich bei der Währung um die *Systemwährung* oder die *Auftragswährung* handelt.
 
 [[table-order-references]]
 .Einstellungen im Bereich *Auftragsreferenzen*
